review figures point 4

--- a/contents/accessible/let_the_world_know_that_you_exist.tex
+++ b/contents/accessible/let_the_world_know_that_you_exist.tex
@@ -19,9 +19,14 @@ and was a finalist in the web page category. This provided valuable exposure.
 \begin{figure}[ht]
     \centering
     \subfigure[Advertising in the open data portal of Málaga]
-        {\centering \includegraphics[width=6cm]{aireGuruFinalist}}
+        {\centering \includegraphics[width=6cm]{Figure_4_5_1_a_aireGuruAdvertised}}
     \hfill
     \subfigure[Finalist]
-        {\centering \includegraphics[width=5cm]{aireGuruFinalistCertificate}}
+        {\centering \includegraphics[width=5cm]{Figure_4_5_1_b_aireGuruFinalistCertificate}}
     \caption{I Contest of reuse of open data. Málaga's town hall}
 \end{figure}
+
+\begin{center}
+    \bf{ (a) Advertising in the open data portal of Málaga     (b) Finalist   \\
+    Figure 4.5.1. I Contest of reuse of open data. Málaga's town hall}
+\end{center}
