--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -34,9 +34,13 @@ user who might consult official sources.
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=12cm]{EAQI}
+    \includegraphics[width=12cm]{Figure_4_4_1_EAQI_Levels}
     \caption{EAQI Levels}
 \end{figure}
+\begin{center}
+    \bf{        
+    Figure 4.4.1. EAQI Levels}
+\end{center}
 
 These icons below are used to help the user get an immediate idea of the pollution level, since they are even more
 decriptive and self-explanatory than just colors alone. Danger is, of course, almost universally indicated by 
@@ -45,10 +49,14 @@ blue or green, missing what they indicate. In this case we have a limited geogra
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=10cm]{EAQI_Icons}
+    \includegraphics[width=10cm]{Figure_4_4_2_EAQI_Icons}
     \caption{Iconografica Aire Guru}
 \end{figure}
 
+\begin{center}
+    \bf{        
+    Figure 4.4.2. EAQI Icons}
+\end{center}
 For the graphs that show variations in time, we have chosen line graphs as being most appropriate,
 since they are good at showing continuous evolution over a period of time. To represent the different components of the AQI, we use a
 graph of stacked bars, since it is easy to see what proportion of the total AQI is formed by which pollutant. \\
@@ -56,13 +64,17 @@ graph of stacked bars, since it is easy to see what proportion of the total AQI 
 \begin{figure}[ht]
     \centering
     \subfigure[AQI Evolution]
-        {\includegraphics[width=5.75cm]{lineChart}}
+        {\includegraphics[width=5.75cm]{Figure_4_4_3_a_lineChart}}
         \hfill
     \subfigure [AQI components]
-        {\includegraphics[width=5.25cm]{stakedBarChart}}
+        {\includegraphics[width=5.25cm]{Figure_4_4_3_b_stakedBarChart}}
     \caption{Charts}
 \end{figure}
 
+\begin{center}
+    \bf{ (a) AQI Evolution     (b) AQI components   \\
+    Figure 4.4.3. Charts}
+\end{center}
 In addition, to explain the concept of AQI and create an awareness about the influence of air pollution, Aire Guru includes it in the
 glossary. This aids understanding of why air pollution should matter to us, with descriptions of the pollutants, medical complications, sources of contamination, the iconography used and
 an explanation of what AQI is and how it is calculated. \\
