--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -67,12 +67,18 @@ In addition, the icon that represents unhealthy levels of pollution, is totally 
 \begin{figure}[ht]
     \centering
     \subfigure[BarChart Aire Guru]
-        {\includegraphics[width=5cm]{barchart}}
+        {\includegraphics[width=5cm]{Figure_5_2_1_a_barchart}}
     \hfill
     \subfigure [Categoria medio ambiente]
-        {\includegraphics[width=4cm]{unhealthyIcon}}
+        {\includegraphics[width=4cm]{Figure_5_2_1_b_unhealthyIcon}}
     \caption{Alert situation}
 \end{figure}
+
+\begin{center}
+    \bf{ (a)BarChart Aire Guru (b) Unhealthy icon\\
+    
+    Figure 5.2.1. Aire Guru. Alert situation}
+\end{center} 
 
 We guide the user from the selection of a point in the city of Málaga, either on their own initiative
 or automatically, to the details of this point in real time and we continue to show the evolution of the pollution at that point.
