--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -45,15 +45,23 @@ the point where the measure was taken since it has been selected in the main map
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=11cm]{zoneRecords}
-    \caption{Zone Records}
+    \includegraphics[width=11cm]{Figure_5_1_1_aireGuru_zoneRecords}
+    \caption{ Zone Records}
 \end{figure}
+\begin{center}
+    \bf{ 
+    Figure 5.1.1. Zone Records}
+\end{center}
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=11cm]{personalRecords}
-    \caption{Personal Records}
+    \includegraphics[width=11cm]{Figure_5_1_2_aireGuru_personalRecords}
+    \caption{ Personal Records}
 \end{figure}
+\begin{center}
+    \bf{ 
+    Figure 5.1.2. Personal Records}
+\end{center}
 
 Aire Guru provides the user with the ability to export the data. The comments of our testers revealed
 that this functionality is not useful for the average user, since they do not have the necessary tools to
