review images point 6

--- a/contents/compelling/make_sure_your_data_is_reliable.tex
+++ b/contents/compelling/make_sure_your_data_is_reliable.tex
@@ -42,6 +42,11 @@ Using the analysis tools of MongoDBCompas and NoSQLBooster we verify the complet
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=12cm]{noSQLBoosterAnalysis}
+    \includegraphics[width=12cm]{Figure_6_2_1_noSQLBoosterAnalysis}
     \caption{Completeness analysis}
 \end{figure}
+
+\begin{center}
+    \bf{ 
+    Figure 6.2.1. Completeness analysis}
+  \end{center} 
