--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -42,12 +42,18 @@ We have not yet done this. \\
 \begin{figure}[ht]
     \centering
     \subfigure[Location Access]
-        {\includegraphics[width=5.5cm]{locationAccess}}
+        {\includegraphics[width=5.5cm]{Figure_6_3_1_a_locationAccess}}
     \hfill
     \subfigure [Settings]
-        {\includegraphics[width=5.5cm]{settings}}
+        {\includegraphics[width=5.5cm]{Figure_6_3_1_b_settings}}
     \caption{Filters}
 \end{figure}
+
+\begin{center}
+    \bf{ (a)Location Access (b)Settings\\
+
+    Figure 6.3.1. Filters}
+  \end{center} 
 
 % The collection of locational data is not exhaustive, but guarantees accuracy. \\
 
@@ -56,6 +62,10 @@ they are identified, and of course, the identification is optional. \\
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=8cm]{loginInfo}
+    \includegraphics[width=8cm]{Figure_6_3_2_loginInfo}
     \caption{Info before login}
 \end{figure}
+\begin{center}
+    \bf{ 
+    Figure 6.3.2. Info before login}
+  \end{center} 
