--- a/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
+++ b/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
@@ -55,9 +55,13 @@ We use clouds to represent air quality measurements, accompanied by a heart if t
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=8cm]{myLocation}
+    \includegraphics[width=8cm]{Figure_6_5_1_myLocation}
     \caption{My Location}
 \end{figure}
+\begin{center}
+    \bf{ 
+    Figure 6.5.1. My Location}
+  \end{center} 
 
 % For maximum flexibility, the user can see the state of the air pollution by dates.
 % Intermediate filtering can be done both by medical conditions and by pollutants.
@@ -84,15 +88,22 @@ In addition, progressive transitions are used to indicate a process is happening
 \begin{figure}[ht]
     \centering
     \subfigure[Searching bar]
-        {\includegraphics[width=5.5cm  ]{searchingBar}}
+        {\includegraphics[width=5.5cm  ]{Figure_6_5_2_a_searchingBar}}
     \hfill
     \subfigure [Tabs]
-        {\includegraphics[width=5.5cm]{tabs}}
+        {\includegraphics[width=5.5cm]{Figure_6_5_2_b_tabs}}
     \vfill
     \subfigure[Link]
-        {\includegraphics[width=6cm]{link}}
+        {\includegraphics[width=6cm]{Figure_6_5_2_c_link}}
     \hfill
     \subfigure [Waiting symbol]
-        {\includegraphics[width=5.5cm]{waitingSymbol}}
+        {\includegraphics[width=5.5cm]{Figure_6_5_2_d_waitingSymbol}}
     \caption{Standard widgets}
 \end{figure}
+
+\begin{center}
+    \bf{ (a)Searching bar (b)Tabs\\
+    (c)Link (d)Waiting symbol\\
+    
+    Figure 6.5.2. Standard widgets}
+  \end{center} 
