--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -44,9 +44,14 @@ lower area where we have the zone and custom history.\\
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=12cm]{heading}
+    \includegraphics[width=12cm]{Figure_6_6_1_heading}
     \caption{Heading}
 \end{figure}
+
+\begin{center}
+    \bf{     
+    Figure 6.6.1. Heading}
+  \end{center} 
  
 The symbol of our website is a genius - a guru. We also include the word "Aire" in the logo, because it perfectly represents 
 what we show with our website. Aire, as you might have guessed, is Spanish for Air. Aire Guru is the guru of air quality. \\
