Make your data available

--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -1,31 +1,26 @@
-\subsection{IN PROGRESS. Make your data available}
+\subsection{Make your data available}
     
-As we mentioned in the introduction to this chapter, the datasets may be available in the original source. However, this doesn't necessarily
-mean that they are readily accessible.\\
-
-The challenges we encounter with the raw data direct from the source of origin, are the following:
+As mentioned in the introduction to this chapter, original datasets may be available online. However, this doesn't necessarily
+mean that they are readily \emph{accessible} to average users, for the following reasons:
 
 \begin{itemize}
-    \item \textbf{Location}. Datasets are usually available in open data portals that have been organized and structured in particular ways.
-    Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need.
-    Sometimes the data may not all be available in the one location, but may require searching through multible portals.
+    \item \textbf{Location}. Datasets are usually available in open data portals that have been organized and structured not for ease of use, but according to some
+          organisational convenience. 
+          Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need.
+          Sometimes the data may not all be available in the one location, but may require searching through multible portals.
 
-    \item \textbf{Extraction}. Datasets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user.
-    Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
+    \item \textbf{Extraction}. Datasets are often available through an API (Application Programming Interface). Using an API requires specialist knowledge.
+          Hopefully there will be a document describing the fields and values presented, and indicating how to actually use the API, but this is not guaranteed.
 
     \item \textbf{Readability}. Datasets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
-    the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
+          the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
 \end{itemize}
-
-Therefore, we can not say that data interfaces are commonly accessible in a useful way for the average user. \\
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-    \item We must provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret,
-          and we must describe it in a way that is easy to understand and quick to digest..\\
-    \item In order to collect the information which is relevant to the user, we will need to carry out processes such as extraction, transformation and
-          data cleaning.
+    \item Provide the information required by the user in an uncomplicated manner, in a format that is easy to read and interpret,
+          and we describe it in a way that is easy to understand and quick to digest.\\
 \end{itemize}
  
 \subsubsection*{In the context of Aire Guru \ldots} 
@@ -58,5 +53,4 @@ Once a category is selected, the user is presented with a search bar that allows
 
 In this case, if we click on the link, data is displayed in a new tab. The use of software
 for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
-
-Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding.
+Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding. \\
