--- a/contents/accessible/_section.tex
+++ b/contents/accessible/_section.tex
@@ -1,27 +1,17 @@
 \section{Accessible}
 
-The data is considered accessible by the user when he does not need to make an excessive effort to
-to be able to obtain them, understand them and use them, that is, apply them to their particular situation. To achieve these objectives,
-it is necessary that the user can access them in a way that is familiar and in a language and nomenclature
-he can understand. \\ 
-
-So how do we consider that data is accessible to a user?
+In this section we consider five questions related to making sure your data is physically and psychologically accessible:
 
 \begin{itemize}
-    \item When it is easy to obtain.
-    The data should be readily available over the web.
-    \item When it is easy to understand.
-    The data must be represented in such a way that it's meaning is clear and obvious to a non-specialist. 
-    Imagine a science writer explaining a complicated concept for a mass market magazine audience. Use everyday language and easily interpretable diagrams.
-    \item When it is easy to use.
-    A user must be able to apply the data to their own particular purpose without complicated procedure.
+    \item Is your data easy to obtain?
+    \item Are you putting up psychological barriers?
+    \item Is your data too low-level?
+    \item Does your data required too much expertise or use specialist terminology?
+    \item How do potential users find out that you exist?
 \end{itemize}
-
-In this section we will see if it is possible to access data by an average user and how to optimize accessibility.
 
 \input{contents/accessible/make_your_data_available.tex}
 \input{contents/accessible/remove_all_barriers_to_access.tex}
-% \input{contents/accessible/cleaned.tex}
 \input{contents/accessible/dont_just_publish_the_raw_data.tex}
 \input{contents/accessible/use_concepts_and_language_that_your_user_understands.tex}
 \input{contents/accessible/let_the_world_know_that_you_exist.tex}
