--- a/contents/compelling/_section.tex
+++ b/contents/compelling/_section.tex
@@ -1,11 +1,15 @@
 \section{Compelling}
-It is human nature to be attracted by the easy, the eye-catching, the interesting. We are more likely to expend time and energy 
-on something we find attractive and compelling. We must design our interface and representations with this in mind, to attract users and maximize their engagement. 
-There is a wealth of relevant marketing research that we can draw upon to capture new users and keep their interest.\\
 
+In this section we consider six questions related to making your content compelling, to attract and keep your users:
 
-In this section we will review strategies to creating a product that attracts and stays in mind
-of the user.
+\begin{itemize}
+    \item Are you solving a real problem?
+    \item Can users rely on your data?
+    \item Can users trust you?
+    \item Are your users emotionally engaged with your data?
+    \item Is your interface familiar and easy to use?
+    \item Does your site look good?
+\end{itemize}
 
 \input{contents/compelling/solve_a_real_problem.tex}
 \input{contents/compelling/make_sure_your_data_is_reliable.tex}
