--- a/contents/preliminaries/_section.tex
+++ b/contents/preliminaries/_section.tex
@@ -1,4 +1,11 @@
 \section{Preliminaries}
 
+In this section we consider two essential preliminary questions you should ask before starting:
+
+\begin{itemize}
+    \item Why do you want to publish your data?
+    \item What is your target market - who are you trying to reach?
+\end{itemize}
+
 \input{contents/preliminaries/understand_your_purpose.tex}
 \input{contents/preliminaries/know_your_user.tex}
