--- a/contents/relevant/_section.tex
+++ b/contents/relevant/_section.tex
@@ -1,8 +1,12 @@
-
 \section{Relevant}
-A good representation of the data is not about show everything to allow the user to have all the information.
-What is helpful, is showing the user what is relevant and neccessary for their purposes, so that they can immediately interpret the data.
-In this section we will explore refining the data to offer the user relevant and quality targeted information.
+
+In this section we consider three questions related to making sure your data is relevant to your users:
+
+\begin{itemize}
+    \item Are you overwhelming your user with irrelvencies?
+    \item What are the real-life consequences that your data indicates?
+    \item Is your data customized for each user?
+\end{itemize}
 
 \input{contents/relevant/the_facts_and_just_the_facts.tex}
 \input{contents/relevant/present_consequences_and_outcomes.tex}
