few little changes

--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -74,9 +74,9 @@ In the following figure we can see the beginning of the document downloaded on J
     Figure 4.3.3. Air quality Document [09/06/2019]. Open Data Portal Málaga}
 \end{center}
 
-In this excerpt we can see the first two subdocuments.
+In the Figure 4.3.3, We can see an excerpt of the first two subdocuments.
 Each subdocument contains the coordinates of the air quality measuring station, the date and time when the measurement was recorded, and the values of the measurements.
-In the following figure we can find the description provided by the open data portal.\\
+In the Figure 4.3.4 we can find the description provided by the open data portal.\\
     
 \begin{figure}[ht]
     \centering
