--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -42,7 +42,7 @@ user who might consult official sources.
     Figure 4.4.1. EAQI Levels}
 \end{center}
 
-These icons below are used to help the user get an immediate idea of the pollution level, since they are even more
+These icons represented in the Figure 4.4.2 are used to help the user get an immediate idea of the pollution level, since they are even more
 decriptive and self-explanatory than just colors alone. Danger is, of course, almost universally indicated by 
 the colour red, and is therefore used appropriately. However, not all cultures have the same perception about
 blue or green, missing what they indicate. In this case we have a limited geographic market, so it isn't an issue.\\
