--- a/contents/compelling/show_the_user_that_you_are_trustworthy.tex
+++ b/contents/compelling/show_the_user_that_you_are_trustworthy.tex
@@ -36,8 +36,7 @@ We never collect the user's position without their permission.
 To get this permission, we require an explicit action - the user has to select "Mi ubicacion" (My location) and accept that we may determine their position.
 Of course the user can always revoke this permission and delete their data at any time. \\
 
-During the post-launch survey, some users indicated that they would prefer to create an account with a username and password rather than use their email accounts, for fear of "information theft".
-We have not yet done this. \\
+During the post-launch survey, some users indicated that they would prefer to create an account with a username and password rather than use their email accounts, for fear of "information theft".\\
 
 \begin{figure}[ht]
     \centering
