--- a/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
+++ b/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
@@ -41,7 +41,7 @@ The graphics have been designed in 2D, since they are easier to interpret and we
 
 Aire Guru consists of multiple sections, and the workflow both within and between the different sections was explicitly modeled.
 The representation follows a logical sequence.
-By selecting a point on the map, we will show detailed information for this point.
+By selecting a point on the map, or allowing Aire Guru to read our position, we will show detailed information for this point.
 The next section filters the information according to the preferences of the user and lastly, it shows the history of pollutants since 2018 and the history of the pollution to which the user has been exposed.\\
 
 We use repeated structures, and the same style, colors and iconography are used throughout the design so that the user can quickly become familiar with how it works, and can
