--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -52,8 +52,7 @@ are, so that we can increase awareness and empower users to do something about i
 Aire Guru includes in its glossary the most common medical conditions that may be affected by air pollution, the pollutants, and the sources that produce these pollutants.
 It is accompanied by an iconography which reflects each of the symptoms. \\
 
-In a survey conducted after launch, users told us that their interest in air pollution had grown.
-Some of them discovered that they had a medical condition that is affected by the pollution.\\
+In a survey conducted after launch, users told us that their interest in air pollution had grown.\\
 
 \begin{figure}[ht]
     \centering
