--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -49,8 +49,7 @@ Our website uses the air quality data provided by the city of Málaga in its ope
 \end{center}
 
 This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
-Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.\\
-
-In this case, if we click on the link, data is displayed in a new tab. The use of software
+Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.In 
+this case, if we click on the link, data is displayed in a new tab. The use of software
 for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding. \\
