small paragraph space removed

--- a/contents/accessible/dont_just_publish_the_raw_data.tex
+++ b/contents/accessible/dont_just_publish_the_raw_data.tex
@@ -50,9 +50,7 @@ To do this, it uses a measure called the air quality index (AQI), specifically t
 \end{center}
 
 Aire Guru shows the AQI values for the city of Málaga, organized into zones, showing the levels of both the overall pollution and individual pollutants, from September 2018 to the present.
-It also shows the evolution of these values in selectable timescales of days, months and years.
-
-It is capable of creating a set of the most relevant pollutants for a given medical condition.
+It also shows the evolution of these values in selectable timescales of days, months and years.It is capable of creating a set of the most relevant pollutants for a given medical condition.
 An innovative feature is the capacity to display levels of any particular pollutant by hour, day, month, or year. \\
 
 The original source data is in GeoJSON format, a format which provides a JSON object with nested subdocuments.
